# fast-api-mfcc

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  models.py  sevice.py
