[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Michael Gurbanov <MYGurbanov@sberbank.ru>"]

[tool.poetry.dependencies]
python = "3.7-3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
python-multipart = "^0.0.5"
python_speech_features = "^0.6"
scipy = "^1.7.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
